@@ -23,7 +23,7 @@ If you're just using Metabase for personal use and want to keep your application
 1. Navigate to your Metabase directory.
 2. If your Metabase is running, stop the Metabase process. You can either close the terminal or kill the process with CTRL-C. If you are running the process as a service, then stop the service.
 3. Copy the application database file (called `metabase.db.mv.db`) and keep that copy somewhere safe. That's it.
-4. Restart Metabase: `java -jar metabase.jar` or start the service again.
+4. Restart Metabase: `java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar` or start the service again.
 
 ### If you're running the Metabase Docker image
 
